feat: new route /send-emails
